--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -136,7 +136,12 @@
                 </div>
     
                 <!-- Background photo -->
+                 {% if book.photo_book %}
                 <div style="background: url('{{ book.photo_book.url }}'); background-size: cover; background-position: center; width: 100%; height: 200px;" class="widget-user-header bg-info">
+                  {% else %}
+                  <div class="widget-user-header bg-info">
+                    {% endif %}
+
                   <h3 class="widget-user-username">{{ book.title }}</h3>
                   <h5 class="widget-user-desc">{{ book.author }}</h5>
               </div>
@@ -145,6 +150,9 @@
                 <div class="widget-user-image">
                     {% if book.photo_author %}
                         <img style="width: 100px; height: 100px;" class="img-circle elevation-2" src="{{ book.photo_author.url }}" alt="User Avatar">
+                        {% else %}
+                        <img class="img-circle elevation-2">
+
                     {% endif %}
                 </div>
     
