--- a/templates/pages/delete.html
+++ b/templates/pages/delete.html
@@ -13,19 +13,18 @@
       <!-- /.card-header -->
       <!-- form start -->
       <form  method="POST" enctype="multipart/form-data">
-      
+        {% csrf_token %}
+
         <div class="row">
           
-       <p class="p-3">هل تريد حقاً حذف الكتاب؟</p>
+       <p class="p-3">هل تريد حقاً حذف الكتاب؟ {{ book.title }}</p>
    
         </div>
         <!-- /.card-body -->
   
         <div class="card-footer">
-          <button type="submit" class="btn btn-danger">حذف</button>
-  
-          <button data-target="#" type="submit" class="btn btn-success">تراجع</button>
-        </div>
+          <button type="submit" name="delete" class="btn btn-danger">حذف</button>
+          <button type="submit" name="cancel" class="btn btn-primary">تراجع</button>      
       </form>
     </div>
   </div>
