--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -6,6 +6,10 @@
 
 
 <style>
+  .navbar {
+    z-index: 1000; /* Navbar z-index */
+
+  }
   /* Position the message at the top of the page */
   #message-container {
       position: fixed;
@@ -179,9 +183,9 @@
                         <span class="sr-only">Toggle Dropdown</span>
                     </button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">تعديل</a>
-                        <a class="dropdown-item" href="#">حذف</a>
-                    </div>
+                      <a class="dropdown-item" href="{% url 'update' book.id %}" style="color: black;">تعديل</a>
+                      <a class="dropdown-item" href="{% url 'delete_book' book.id %}" style="color: black;">حذف</a>
+                  </div>
                 </div>
     
                 <!-- Background photo -->
