--- a/templates/pages/update.html
+++ b/templates/pages/update.html
@@ -1,6 +1,15 @@
 {% extends 'base.html' %}
 {% block body %}
 
+{% if messages %}
+        <div class="messages">
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
     
 <div style="direction: rtl;" class="wrapper">
 
@@ -16,16 +25,9 @@
     <form  method="POST" enctype="multipart/form-data">
     
       <div class="card-body">
-        
-        <input type="text" class="form-control" placeholder="input text">
-        <input type="text" class="form-control" placeholder="input text">
-        <input type="text" class="form-control" placeholder="input text">
-        <input type="text" class="form-control" placeholder="input text">
-        <input type="text" class="form-control" placeholder="input text">
-        <input type="text" class="form-control" placeholder="input text">
-        <input type="text" class="form-control" placeholder="input text">
+        {% csrf_token %}  <!-- CSRF Token -->
+        {{ form4.as_p }}
 
-        <small id='totalrente' class="form-text text-muted"></small>
       </div>
       <!-- /.card-body -->
 
