--- a/templates/parts/sidebar.html
+++ b/templates/parts/sidebar.html
@@ -46,9 +46,9 @@
                     </a>
                   </li> 
               <form id="cat" method="POST">
-             
-                  <input type="text" class="form-control">
+                {% csrf_token %}
 
+                      {{categor}}
                   <button type="submit" class="btn btn-success">save</button>
                   <button id="backcat" class="btn btn-primary ">back</button>
               </form>  
