--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -67,7 +67,7 @@
                 <div class="card-body">
                   <div class="d-flex">
                     <p class="d-flex flex-column">
-                      <span class="text-bold text-lg">{{book|length}}</span>
+                      <span class="text-bold text-lg">{{allbooks}}</span>
                       <span>اجمالي عدد الكتب</span>
                     </p>  
                   </div>
