--- a/templates/base.html
+++ b/templates/base.html
@@ -65,17 +65,16 @@
     });
 
     {% for book in book %}
-    $(".category{{book.category.id}}").click(function () {
-    $(".bookhide").hide()
-    $(".book{{book.category.id}}").show()
-  });
+$(".category{{ book.category.id }}").click(function () {
+        $(".bookhide").hide(); // Hide all books
+        $(".book{{ book.category.id }}").show(); // Show books in this category
+    });
 
-  $(".status{{book.status}}").click(function () {
-
-  
-    $(".bookhide").hide()
-    $(".book{{book.status}}").show()
-  });
+    // Add click event for status filter
+    $(".status{{ book.status }}").click(function () {
+        $(".bookhide").hide(); // Hide all books
+        $(".book{{ book.status }}").show(); // Show books with this status
+    });
   {% endfor %}
 
 
